# image-processor

./: CMakeLists.txt  README.md  bmp.cpp  bmp.h  canny.cpp  canny.h  crop.cpp  crop.h  edgedetection.cpp  edgedetection.h  fileformat.h  filter.h  gaussianblur.h  grayscale.cpp  grayscale.h  image.cpp  image.h  image_processor.cpp  linearfilter.cpp  linearfilter.h  negative.cpp  negative.h  sharpening.h
test/: test.cpp
